# pnp-toolkit

./: .gitignore  README.md  config.yml  pyproject.toml  setup.cfg
pnp_toolkit/builtin_specs/: epic_tm_spec.yml
pnp_toolkit/cli/: args.py  build.py  build_pdf.py  main.py
pnp_toolkit/core/: layout.py  measures.py  pdf_generator.py  spec.py  structs.py  utils.py
pnp_toolkit/core/binpack/: input_types.py  output_types.py  utils.py
pnp_toolkit/core/binpack/strategy/: base.py  roll_guillotine.py  simple_guillotine.py
pnp_toolkit/core/pipeline/: build.py
pnp_toolkit/core/render/: base.py  pdf.py  types.py
pnp_toolkit/core/spec/: base.py  generic_parse.py  yaml_parse.py
pnp_toolkit/tests/core/: test_measures.py
pnp_toolkit/tests/core/binpack/: test_roll_guillotine.py  test_simple_guillotine.py  utils.py
pnp_toolkit/tests/core/spec/: test_generic_parse.py  test_yaml_parse.py
src/: auto_layout.py  pdfjam.py  structs.py  utils.py
