[metadata]
name = pnp_toolkit
version = 0.0.3
description = Toolkit for prepare separate materials to print&play state
long_description = file: README.md

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    importlib-metadata; python_version<"3.8"
    reportlab>=3.6
    PyYAML>=6.0
    click~=8.1
    sortedcontainers~=2.4
    Pillow
    attrs
    pytest

[options.entry_points]
console_scripts =
    pnp-toolkit = pnp_toolkit.cli.main:main

[options.packages.find]
exclude =
    pnp_toolkit.tests*